--- a/style.css
+++ b/style.css
@@ -341,6 +341,10 @@ img {
   width: 95%;
 }
 
+.skills_en {
+  width: 85%;
+}
+
 /*================== Work ==================*/
 
 .work_container {
